name:                MinecraftCLI
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Xandaros/MinecraftCLI#readme
license:             BSD2
license-file:        LICENSE
author:              Xandaros
maintainer:          mz-bremerhaven@gmail.com
copyright:           (C) 2017 Xandaros
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Protocol.Minecraft
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable MinecraftCLI-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MinecraftCLI
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Xandaros/MinecraftCLI
