name:                MinecraftCLI
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Xandaros/MinecraftCLI#readme
license:             BSD2
license-file:        LICENSE
author:              Xandaros
maintainer:          mz-bremerhaven@gmail.com
copyright:           (C) 2017 Xandaros
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Protocol.Minecraft
                     , Network.Protocol.Minecraft
                     , Network.Protocol.Minecraft.Encoding
                     , Network.Protocol.Minecraft.Types
                     , Network.Protocol.Minecraft.Packet
                     , Network.Protocol.Minecraft.Yggdrasil
  build-depends:       base >= 4.7 && < 5
                     , network
                     , bytestring
                     , text
                     , asn1-encoding
                     , asn1-types
                     , x509
                     , cryptonite
                     , transformers
                     , mtl
                     , servant
                     , servant-client
                     , http-client
                     , http-client-tls
                     , aeson
                     , binary
                     , zlib
  default-language:    Haskell2010
  ghc-options:       -fdefer-typed-holes -Wall -Wno-name-shadowing

executable MinecraftCLI
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MinecraftCLI
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Xandaros/MinecraftCLI
